--- a/ExeHide/Views/MainView.xaml
+++ b/ExeHide/Views/MainView.xaml
@@ -16,7 +16,8 @@
                  HorizontalContentAlignment="Center"
                  Grid.Row="0"
                  FontFamily="Ebrima"
-                 FontSize="16"/>
+                 FontSize="16"
+                 Margin="0 5 0 5"/>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -25,11 +26,18 @@
             <Button x:Name="CreatePassword" 
                     Content="Lock file"
                     FontFamily="Copperplate Gothic Bold"
-                    Grid.Column="0"/>
+                    Grid.Column="0"
+                    Background="WhiteSmoke"
+                    Margin="0 5 2.5 5">
+            </Button>
+
             <Button x:Name="RemovePassword" 
                     FontFamily="Copperplate Gothic Bold"
                     Content="Unlock file"
-                    Grid.Column="1"/>
+                    Grid.Column="1"
+                    Background="WhiteSmoke"
+                    Margin="2.5 5 0 5">
+            </Button>
         </Grid>
     </Grid>
 </Window>
